<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <!--    <EditText-->
<!--        android:id="@+id/email"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginTop="228dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:hint="@string/prompt_email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:selectAllOnFocus="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/net_ID"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="NetID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/net_ID"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/net_ID"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

<!--    <Button-->
<!--        android:id="@+id/register"-->
<!--        android:layout_width="133dp"-->
<!--        android:layout_height="46dp"-->
<!--        android:layout_gravity="start"-->
<!--        android:layout_marginStart="48dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="48dp"-->
<!--        android:layout_marginBottom="64dp"-->
<!--        android:text="Register"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.923"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
<!--        app:layout_constraintVertical_bias="0.533" />-->

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/login"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginStart="88dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.071" />

    <!--    <CheckBox-->
<!--        android:id="@+id/Tutor"-->
<!--        android:layout_width="85dp"-->
<!--        android:layout_height="43dp"-->
<!--        android:text="Tutor"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/register"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/StudentC"-->
<!--        app:layout_constraintHorizontal_bias="0.666"-->
<!--        app:layout_constraintStart_toStartOf="@+id/login"-->
<!--        app:layout_constraintTop_toTopOf="@+id/StudentC"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

<!--    <CheckBox-->
<!--        android:id="@+id/StudentC"-->
<!--        android:layout_width="85dp"-->
<!--        android:layout_height="43dp"-->
<!--        android:text="Student"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/register"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/register"-->
<!--        app:layout_constraintHorizontal_bias="0.808"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
<!--        app:layout_constraintVertical_bias="0.75" />-->

<!--    <EditText-->
<!--        android:id="@+id/name"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="44dp"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Name"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/password"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.531"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.67" />-->

</androidx.constraintlayout.widget.ConstraintLayout>